<resources>
    <string name="app_name" translatable="false">Gather Around</string>
    <string name="msg">Request Permissions</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="eventlist_button">EventList Button</string>
    <string name="event_list">Event List</string>
    <string name="choose_an_action">Choose an Action</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="generate_qr">Generate QR Code</string>
    <string name="cancel">Cancel</string>
    <string name="summary">Summary:</string>
    <string name="once_upon_a_time_a_few_missadfsafasdfasfdf">Once upon a time a few missadfsafasdfasfdf</string>
    <string name="location">Location:</string>
    <string name="rio_de_janeiro">Rio de Janeiro</string>
    <string name="category">Category:</string>
    <string name="individual">INDIVIDUAL</string>
    <string name="whole_day">WHOLE DAY</string>
    <string name="one_day">ONE DAY</string>
    <string name="select_start_date">SELECT START DATE</string>
    <string name="select_end_date">SELECT END DATE</string>
    <string name="select_start_time">SELECT START TIME</string>
    <string name="select_end_time">SELECT END TIME</string>
    <string name="done">Done</string>
    <string name="eventname">Event Name</string>
    <string name="location_name">Location Name</string>
    <string name="lol">lol</string>
    <string name="followers">Followers</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="select_time_and_date">Select Time and Date</string>
    <string name="enter_location_name">Enter Location name</string>
    <string name="enter_summary">Enter Summary</string>
    <string name="save_to_phone">Save to Phone</string>
    <string name="genrated_qr_code">Genrated QR Code</string>
    <string name="search">Search</string>
    <string name="cancelledScan">The scan was cancelled</string>
    <string name="addedParticipants">Followed event</string>
    <string name="event_exists">Event Exists</string>
    <string name="no_internet">No Internet connection</string>
    <string name="invalidQRCode">Invalid QR Code</string>
    <string name="createdEvent">Created Event</string>
    <string name="fillInAllFields">Please fill in all fields</string>
    <string name="failedToAddEvent">Failed to add Event</string>
    <string name="login_button_text">Login</string>
    <string name="text_user_id">User ID</string>
    <string name="text_password">Password (more than 6 characters)</string>
    <string name="text_email">Email</string>
    <string name="text_signUp">Sign Up</string>
    <string name="text_signUpHintText">Does not have an account? Create an account with your email.</string>
    <string name="confirmPasswordButton_text">Confirm Password</string>
    <string name="signUpNameEditText_hintText">Pick up a name</string>
    <string name="add_image_text">Select image for your profile picture</string>
    <string name="selectImageDescription_text">Please select image from your phone for your profile picture.</string>
    <string name="passwordLengthErrorMessage_text">Password should be more than 6 characters.</string>
    <string name="passwordConfirmationNoMatchMessage_text">Password and confirmation does not match. Please try again.</string>
    <!--<string name="contrary_to_popular_belief_lorem_ipsum_is_not_simply_random_text_it_has_roots_in_a_piece_of_classical_latin_literatu_re_from_45_bc_making_it_over_2000_years_old_richard_mcclintock_a_latin_professor_at_ham_pden_sydney_college_in_virginia_looked_up_one_of_the_more_obscure_latin_words_consectetu_r_from_a_lorem_ipsum_passage_and_going_t_hrough_the_cites_of_the_word_in_classical_litera_ture_discovered_the_undoubtable_source_lorem_ipsum_comes_from_sections_1_10_32_and_1_10_33_o_f_the_extremes_of_good_and_evil_by_cicero_wr_itten_in_45_bc_this_book_is_a_treatise_on_the_theory_of_ethics_very_popular_during_the_renai_ssance_the_first_line_of_lorem_ipsum_comes_from_a">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literatu re from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Ham pden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetu r, from a Lorem Ipsum passage, and going t hrough the cites of the word in classical litera ture, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 o f (The Extremes of Good and Evil) by Cicero, wr itten in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renai ssance. The first line of Lorem Ipsum,comes from a</string>-->
    <string name="contactsAlreadyExists">Already exists in contacts.</string>
    <string name="contactsAddedToList">Added this user to contact</string>
    <string name="text_createAcount">Create a new account?</string>
    <string name="text_alreadyHaveAcount">Already have an account?</string>
    <string name="message_loginOnGoing">Login on going</string>
    <string name="message_loginFailed">Seems failed to login. Please try again.</string>
    <string name="message_filleUpForm">Please fill up the form to login.</string>
    <string name="message_creatingAccount">Creating account</string>
    <string name="message_successfullyCreatedAccount">Successfully created a new account</string>
    <string name="message_failedToCreateAccount">Failed created a new account</string>
    <string name="text_createUserName">Pick a user name</string>
    <string name="text_typeProfileText">Type your profile text</string>
    <string name="text_selectImage">Select profile image and background pictures</string>
</resources>
