<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CardViewItem"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="8dp"
    card_view:cardBackgroundColor="@android:color/transparent"
    card_view:cardUseCompatPadding="true"
    >
    <!--android:layout_marginTop="8dp"-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/event_edittext2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardbackground"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/event_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:maxLines="1"
                    android:padding="@dimen/cardmargin"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Dick Museum Tour" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/event_date"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingBottom="4dp"
                        android:paddingTop="4dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="start" />

                    <TextView
                        android:id="@+id/event_time"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingBottom="4dp"
                        android:paddingTop="4dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="finish" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/summaryLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/middle_cardBackGround"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/summaryTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/cardmargin"
                        android:text="@string/summary"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/event_summary"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="18dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLength="130"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/cardmargin"
                        android:text="@string/once_upon_a_time_a_few_missadfsafasdfasfdf"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/cardmargin"
                        android:text="@string/location"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/event_location"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="18dp"
                        android:layout_weight="2"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/cardmargin"
                        android:text="@string/rio_de_janeiro"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/middle_cardBackGround"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/cardmargin"
                        android:text="@string/category"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/event_category"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="18dp"
                        android:layout_weight="2"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/cardmargin"
                        android:text="@string/individual"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</android.support.v7.widget.CardView>
