<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logincoordinate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardbackground"
    android:orientation="vertical"
    >
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:background="@color/cardbackground"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Gather Around"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            />
    </android.support.design.widget.AppBarLayout>
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/cordinateparent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <LinearLayout
            android:id="@+id/signface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/text_email"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/text_password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColor="@color/cardbackground"
                    android:textColorHint="@color/white"
                    />

                <EditText
                    android:id="@+id/signUpPasswordConfirmEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/confirmPasswordButton_text"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    />

                <EditText
                    android:id="@+id/signUpNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="Create user name"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    />

                <TextView
                    android:id="@+id/selectPictureText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:text="Select image and background pictures"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:layout_marginVertical="18dp"
                    >
                    <ImageView
                        android:id="@+id/selectImageButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/selectImageDescription_text"
                        android:src="@drawable/selectprofile"
                        android:padding="8dp"
                        android:scaleType="fitCenter"
                        />
                    <ImageView
                        android:id="@+id/selectBackgroundButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/selectImageDescription_text"
                        android:src="@drawable/selectbackground"
                        android:padding="8dp"
                        />

                </LinearLayout>
                <Button
                    android:id="@+id/signUpButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/cardbackground2"
                    android:text="@string/text_signUp"
                    android:textColor="@color/white"
                    />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <!--Login View-->

        <LinearLayout
            android:id="@+id/loginback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <EditText
                android:id="@+id/loginEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:background="@android:color/transparent"
                />

            <EditText
                android:id="@+id/loginPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:background="@android:color/transparent"
                />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text"
                android:background="@color/cardbackground2"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

    <Button
        android:id="@+id/switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardbackground2"
        android:text="Already Have an Account?"
        android:textColor="@color/cardbackground"
        />
</LinearLayout>
